fix: alignment

--- a/frappe/public/scss/desk/list.scss
+++ b/frappe/public/scss/desk/list.scss
@@ -231,6 +231,10 @@
 		margin: 0;
 	}
 
+	.select-like {
+		padding-left: 0;
+	}
+
 	.checkbox-actions {
 		display: none;
 	}
@@ -247,6 +251,10 @@
 	& > [data-sort-by]:hover {
 		cursor: pointer;
 		text-decoration: underline;
+	}
+
+	&.ellipsis {
+		margin-right: 0;
 	}
 }
 
